# tkgm-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: 01_provinces.py  02_parcel_lookup.py  03_async.py
tests/: test_async_client.py  test_client.py  test_models.py
tkgm/: __init__.py  async_client.py  client.py  exceptions.py  models.py
