[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tkgm*"]

[project]
name = "tkgm-py"
version = "1.0.0"
description = "Python client for the TKGM (Turkish Land Registry) API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["tkgm", "tapu", "kadastro", "turkey", "land-registry", "gis", "parcel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "requests>=2.28",
    "httpx>=0.24",
    "urllib3>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "responses>=0.24",
    "ruff",
    "mypy",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/MEnsar55/tkgm-py"
Issues   = "https://github.com/MEnsar55/tkgm-py/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
